css/main.sass
$red:         	#C93B1A
$orange:        #F17721
$brown:         #4C3D40
$light-brown:	#91756D
$dark-orange:   #CF4B19
$yellow:        #F8AC20
$light-gray:    #F5F5F5

$dark-purple:	#502D5C
$purple:		#A55A99
$alt-purple:	#764F84

$light-red:		#E34343
$red:			#B62626


$bitter:        'Bitter', serif
$catamaran:     'Catamaran', sans-serif
$nexarust:      'nexa_rust_sansblack'

html
  -webkit-box-sizing: border-box
  -moz-box-sizing: border-box
  box-sizing: border-box
  
  a
    color: $orange
    &:hover
      color: $purple
      cursor: pointer

*, *:before, *:after 
  -webkit-box-sizing: inherit
  -moz-box-sizing: inherit
  box-sizing: inherit
  text-rendering: optimizeLegibility
  -webkit-font-smoothing: antialiased
  -moz-osx-font-smoothing: grayscale

h2,
.masthead-home p
  font: bold 28px $bitter
  letter-spacing: -0.5px

.lg-nav
  display: none

.nav-logo
  width: 120px
  height: auto

nav
  a
    font-size: 20px
    font-family: $nexarust
    text-decoration: none
    color: $yellow
    display: block
    padding: 12px
    transition: all 250ms

    &:hover
      color: white

  ul
    list-style: none
    overflow: auto
    display: flex
    align-items: center
    justify-content: center
    
    li
      margin: 0
      padding: 0
      float: left

img
  max-width: 100%
  height: auto

header
  background: $dark-orange
  padding: 5px 0

.tagline
  display: flex
  flex-direction: column
  align-items: center
  justify-content: center
  background: $dark-purple
  padding: 120px 5%
  
  img
    max-width: 300px
    height: auto
    display: block
  
  h2
    color: $orange
    font-family: $nexarust
    font-size: 36px
    padding-left: 5%
    text-transform: uppercase

.text-yellow
  color: $yellow

.text-light-red
  color: $light-red


.about
  background: $alt-purple
  padding: 70px 5%

  h2
    color: $orange
  
  p
    color: white
    text-align: center
    max-width: 1024px
    display: block
    margin: 0 auto

.venue
  background-color: $light-gray
  color: $light-brown
  display: flex
  align-items: center
  justify-content: center
  flex-direction: column
  padding: 40px 5%
  
  .blocks-wrapper
    display: flex
    align-items: center
    justify-content: center
  
  h2
    color: $light-brown
    text-align: center
    font-family: $nexarust
    font-size: 40px
    text-transform: uppercase
  
  .venue-block
    display: flex
    flex-direction: column
    justify-content: center
    text-align: center
    max-width: 320px
    padding: 0 5%
    box-sizing: border-box
    
    img
      display: block
      max-width: 100%
      height: auto
      margin: 10px auto
    
    p
      font-size: 18px
      line-height: 22px

  .left-title
    color: $brown

.masthead-home
  text-align: center
  background-image: url(../img/masthead-bg.jpg)
  padding: 55px 0

  img
    width: 70%
    max-width: 720px

  p
    color: white
  
  .btn-hollow
    font-size: 24px
    border: 1px solid white
    padding: 15px 30px
    background-color: transparent
    font-family: $bitter
    border-radius: 4px
    color: white
    transition: all 250ms

    &:hover
      background: white
      color: $yellow
      cursor: pointer

.masthead-agenda
  height: 580px
  text-align: center
  background-image: url(../img/AgendaBg.jpg)
  background-repeat: no-repeat
  background-size: cover
  padding: 55px 0
  display: flex
  align-items: center
  justify-content: center
  flex-direction: column
  
  img
    display: block
    max-width: 224px
    height: auto
    margin-bottom: 20px
    
  h2
    font-family: $nexarust
    font-size: 50px
    color: $yellow

.masthead-sponsors
  height: 580px
  text-align: center
  background-image: url(../img/SponsorsBg.jpg)
  background-repeat: no-repeat
  background-size: cover
  padding: 55px 0
  display: flex
  align-items: center
  justify-content: center
  flex-direction: column
  
  img
    display: block
    max-width: 224px
    height: auto
    margin-bottom: 20px
    
  h2
    font-family: $nexarust
    font-size: 50px
    color: $purple

.masthead-volunteers
  height: 580px
  text-align: center
  background-image: url(../img/VolunteersBg.jpg)
  background-repeat: no-repeat
  background-size: cover
  padding: 55px 0
  display: flex
  align-items: center
  justify-content: center
  flex-direction: column
  
  img
    display: block
    max-width: 224px
    height: auto
    margin-bottom: 0px
    
  h2
    font-family: $nexarust
    font-size: 50px
    color: $yellow
    margin: 10px 0
  
  h3
    font-family: $catamaran
    font-size: 24px
    color: $yellow
    margin: 15px 0
    padding: 0 5%


.masthead-pitches
  height: 580px
  text-align: center
  background-image: url(../img/PitchesBg.jpg)
  background-repeat: no-repeat
  background-size: cover
  padding: 55px 0
  display: flex
  align-items: center
  justify-content: center
  flex-direction: column
  
  img
    display: block
    max-width: 224px
    height: auto
    margin-bottom: 30px
    
  h2
    font-family: $nexarust
    font-size: 50px
    line-height: 50px
    color: $yellow
    margin: 10px 0
  
  h3
    font-family: $catamaran
    font-size: 24px
    color: $yellow
    margin: 15px 0

.masthead-contact
  height: 580px
  text-align: center
  background-image: url(../img/ContactBg.jpg)
  background-repeat: no-repeat
  background-size: cover
  padding: 55px 0
  display: flex
  align-items: center
  justify-content: center
  flex-direction: column
  
  img
    display: block
    max-width: 224px
    height: auto
    margin-bottom: 0px
    
  h2
    font-family: $nexarust
    font-size: 50px
    color: $orange

.mast-wrapper
  display: flex
  flex-direction: column
  justify-content: center
  align-items: center
  text-align: center

.faq
  background: $red
  color: white
  padding: 50px

  .wrapper
    dd
      margin-bottom: 50px

.agenda-container
  padding: 80px 5%

.sponsors
  background: #ffffff
  padding: 10px 0
  text-align: center

  h3
    color: $orange
    font-family: $bitter
    font-size: 26px
  
  img
    max-width: 300px
    display: inline-block
    padding: 15px
  
  .sponsors-logos
    max-width: 1100px
    margin: 0 auto

.left-title,
.right-desc
  text-align: center
  padding: 30px

.about
  .left-title
    padding: 0
    padding-top: 30px
  
.venue
  .left-title
    padding-bottom: 30px    

.right-desc
  padding-top: 0

dl a
  color: $yellow

p,
dt,
dd
  font: normal 18px $catamaran
  line-height: 22px

dt
  font-weight: bold

dd
  padding: 0
  margin: 0

.map,
.map iframe
  height: 425px

.xs-nav
  height: 70px
  display: flex
  align-items: center

  ul
    background: $dark-orange
    position: absolute
    top: 60px
    width: 100%

    li
      float: none


  .logo-mobile
    position: absoulute
    left: 10px
    top: 0

  .menu-toggle
    position: absolute
    right: 20px
    top: 30px

    img
      width: 24px

footer
  background: $orange
  padding: 5px 0

  p
    font-size: 12px
    text-align: center
    color: white

.apostrophe
  font-family: $bitter


@media (min-width: 768px)
  p,
  dt,
  dd
    font: normal 20px $catamaran
    line-height: 36px
    padding: 0 15px
  
  dt
    font-weight: bold
  
  .tagline
    flex-direction: row
    
    h2
      font-size: 60px
  
  .mastheads
    h2
      font-size: 60px
      line-height: 60px
    
    h3
      font-size: 30px

@media (min-width: 992px)

  .xs-nav
    display: none
  
  .lg-nav
    display: block

  h2,
  .masthead p
    font: bold 46px $bitter

  nav
    width: 1020px
    margin: 0 auto
    display: block
  
  .footer
    p
      font-size: 20px
  
  .sponsors
    padding: 100px 0
    
    h3
      font-size: 36px
    
@media (min-width: 1200px)
  .venue  
    overflow: auto
    height: 525px

    .left-title
      padding-top: 100px

  .about
    padding: 80px 0
    overflow: auto

  .left-title,
  .right-desc
    padding: 0

  .left-title
    width: 540px
    float: left
    text-align: right

  .right-desc,
  .map
    width: 700px
    float: left
    padding-left: 85px
    text-align: left
  
  .faq
    padding: 125px

    .wrapper
      max-width: 1180px
      margin: 0 auto

      dl
        -webkit-columns: 300px 3
        -moz-columns: 300px 3
        columns: 300px 3

